Cambios sobre bandas terminado

--- a/public/index.html
+++ b/public/index.html
@@ -25,6 +25,16 @@
             console.log("Mensaje recibido...",payload);
         });
 
+        socket.on('nuevo-mensaje',function(payload){
+            console.log(payload);
+        });
+
+        socket.on('active-bands',function(payload){
+            console.clear();
+            console.table(payload);
+        });
+
+
     </script>
 </body>
 </html>
